# SegDAC

./: .gitignore  .gitmodules  README.md  test.py  test_segdac.py
segdac/: install_dependencies.sh  pyproject.toml  requirements.txt  setup.sh
segdac/src/segdac/: __init__.py  processor.py  processor_viz.py
segdac/src/segdac/action_scaling/: env_action_scaler.py
segdac/src/segdac/agents/: action_sampling_strategy.py  actor.py  actor_critic_agent.py  agent.py  critic.py  distribution_factory.py
segdac/src/segdac/data/: mdp.py
segdac/src/segdac/distributions/: squashed_normal.py
segdac/src/segdac/masks/: coords_extractor.py
segdac/src/segdac/networks/: dqn.py  mlp.py  network_wrapper.py  residual_mlp.py  sac_ae.py  trunk_mlp.py
segdac/src/segdac/stats/: grad.py
segdac_dev/: pyproject.toml  requirements.txt
segdac_dev/src/segdac_dev/config/: ddpg_config_updaters.py  dqn_config_updaters.py  drqv2_config_updaters.py  ftd_config_updaters.py  madi_config_updaters.py  random_policy_config_updaters.py  sac_ae_config_updaters.py  sac_config_updaters.py  sac_sam_encoder_config_updaters.py  sada_config_updaters.py  samg_config_updaters.py  segdac_config_updaters.py  smg_config_updaters.py  td3_config_updaters.py
segdac_dev/src/segdac_dev/conversion/: numpy_to_torch.py
segdac_dev/src/segdac_dev/envs/: env.py  factory.py
segdac_dev/src/segdac_dev/evaluation/: rl_evaluator.py
segdac_dev/src/segdac_dev/jobs/: identifier.py
segdac_dev/src/segdac_dev/logging/: artifacts.py  rgb_pixels_writer.py  video_recorder_factory.py
segdac_dev/src/segdac_dev/metrics/: metrics.py
segdac_dev/src/segdac_dev/replay_buffers/: facade.py  factory.py
(+137 files in other folders)
