[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "segdac_dev"
version = "0.0.1"
authors = [{ name = "Alexandre Brown", email = "alexandre.brown@mila.quebec" }]
description = "SegDAC Development Library"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "av==13.0.0",
  "hydra-core==1.3.2",
  "tqdm==4.67.1",
  "comet-ml==3.49.4",
  "loguru==0.7.3",
  "numpy==1.26.4",
  "matplotlib==3.10.1",
  "opencv-python-headless==4.11.0.86",
  "torchrl==0.6.0",
  "plotly==6.0.1",
  "rliable==1.2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/segdac_dev/"]
